--- a/_c8oProject/sequences/clean_outputs.yaml
+++ b/_c8oProject/sequences/clean_outputs.yaml
@@ -1,10 +1,11 @@
-comment: 'Clean the generated files from the ''outputs'' or ''read'' directories. Can be used in a Convertigo scheduled job to automate the process. Variables : ''max_time'' => delete only files older than x ms. ''all'' => Delete all files in folder even in a max_time is defined. ''target'' => if value is ''fill'' searches for files in ''outputs'' folder else in ''read'' folder.'
+comment: 'Clean the generated files. Can be used in a Convertigo scheduled job to automate the process. Variables : ''max_time'' => delete only files older than x ms. ''all'' => Delete all files in folder even in a max_time is defined. ''target'' => Folder path containing the files to delete. Can use "./",  ".//" or absolute path syntax.'
+↓jIf [steps.IfStep-1752754109667]: 
+  condition: target == null || target == ""
+  ↓Return [steps.ReturnStep-1752754134023]: 
 ↓init [steps.SimpleStep-1671528840321]: 
-  expression: |
-    'now = (new Date()).getTime();
-    folder = target == ''fill'' ? ''outputs'' : ''read'';'
+  expression: now = (new Date()).getTime();
 ↓List_directory [steps.ListDirStep-1671528590874]: 
-  sourceDirectory: '".//" + folder'
+  sourceDirectory: target
 ↓Iterator [steps.IteratorStep-1671528710771]: 
   sourceDefinition: 
     - xmlizable: 
@@ -36,7 +37,7 @@ comment: 'Clean the generated files from the ''outputs'' or ''read'' directories
             - java.lang.String: 
               - ↑value: .
     ↓Delete_file [steps.DeleteStep-1671529688325]: 
-      sourcePath: '".//"+folder+"/"+item.getTextContent()'
+      sourcePath: target + "/" + item.getTextContent()
 ↓max_time [variables.RequestableVariable-1671529075167]: 
   comment: Define the maximum time in millisecond before deleting the file. Default is 86400000ms (24h). Only works if 'all' is 'false'
   value: 86400000
@@ -44,19 +45,18 @@ comment: 'Clean the generated files from the ''outputs'' or ''read'' directories
   comment: Set value to 'true' to directly delete all files whatever last modified date they have. Default is 'false', it only deletes files older than 'max_time'
   value: false
 ↓target [variables.RequestableVariable-1740155136088]: 
-  value: fill
+  value: 
 ↓Test_Case [core.TestCase]: 
   ↓max_time [variables.TestCaseVariable-1671529491892]: 
     value: 86400000
   ↓all [variables.TestCaseVariable-1671529491894]: 
     value: true
+  ↓target [variables.TestCaseVariable-1752754440094]: 
+    value: .//outputs
 ↓Test_Case_1 [core.TestCase]: 
   ↓max_time [variables.TestCaseVariable-1671529511205]: 
     value: 86400
   ↓all [variables.TestCaseVariable-1671529511207]: 
     value: false
-↓Test_Case_2 [core.TestCase]: 
-  ↓all [variables.TestCaseVariable-1740155675212]: 
-    value: true
-  ↓target [variables.TestCaseVariable-1740155689365]: 
-    value: not fill
+  ↓target [variables.TestCaseVariable-1752754469209]: 
+    value: .//outputs
